fixed some spacing for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+html, body, h1, h2, h3, h4, h5, h6, div {
+    padding: 0;
+    border: 0;
+    margin: 0;
+  }
+
+
 /* ———————————— Text Styles ———————————— */
 
 h1, h2, h3, h4, h5, h6, p {
@@ -142,6 +149,17 @@ nav ul {
 }
 
 .card-image:hover {
+    transform: scale(1.05);
+}
+
+.playlist{
+    width: 100%;
+    height: 100%;  
+    transition: all 0.4s ease;
+    margin-bottom: 5%;
+}
+
+.playlist:hover{
     transform: scale(1.05);
 }
 
